[package]
name = "load_switch"
version = "0.1.0"
edition = "2021"
keywords = ["arm", "cortex-m", "load-switch"]
categories = ["embedded", "no-std"]
license = "MIT"
description = "Load Switch library for Solar Racing @ GT"
repository = "https://github.com/harry-z-kang/gtsr-load-switch"
authors = ["Zixuan Kang <zkang35@gatech.edu>", "Isaac Weintraub <weintraub@gatech.edu>"]

[dependencies.tm4c123x-hal]
version = "0.10.2"
features = ["rt"]
